<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToursClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_label">Login</string>
    <string name="sign_up_label">Sign Up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">johndoe@site.com</string>
    <string name="back_label">Back</string>
    <string name="submit_label">Submit</string>
    <string name="password_label">Password</string>
    <string name="re_enter_pass_label">Re-Enter Password</string>
    <string name="ph_no_label">Cell Phone Number</string>
    <string name="state_label">State</string>
    <string name="country_label">Country</string>
    <string name="username_label">User Name</string>
    <string name="email_label">Email</string>
    <string name="phone_hint">without prefix</string>
    <string name="city_label">City</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_menu">Menu</string>
    <string name="tv_email_addresses">Email Address</string>
    <string name="message_executingSignup">Waiting for sign up server response</string>

</resources>
